<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="freerunningapps.veggietizer.view.activity.InputActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/block_not_pressed"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_input_block1_padding_bottom"
            android:paddingLeft="@dimen/block_horizontal_padding"
            android:paddingRight="@dimen/block_horizontal_padding"
            android:paddingTop="@dimen/block_vertical_padding" >

            <TextView
                android:id="@+id/textView_input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/textView_input_description"
                android:textSize="@dimen/abc_text_size_medium_material"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/spinner_meals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <ImageButton 
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_action_info"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="onInputHelpRequested"/>
                
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/block_not_pressed"
            android:orientation="vertical"
            android:paddingBottom="@dimen/block_vertical_padding"
            android:paddingLeft="@dimen/block_horizontal_padding"
            android:paddingRight="@dimen/block_horizontal_padding"
            android:paddingTop="@dimen/block_vertical_padding" >

            <TextView
                android:id="@+id/textView_select_meat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/textView_select_meat"
                android:textSize="@dimen/abc_text_size_medium_material"/>

            <RadioGroup
                android:id="@+id/radioGroup_meat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioButton_meat_beef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onMeatSelected"
                    android:text="@string/meat_beef" />

                <RadioButton
                    android:id="@+id/radioButton_meat_pork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onMeatSelected"
                    android:text="@string/meat_pork" />

                <RadioButton
                    android:id="@+id/radioButton_meat_poultry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onMeatSelected"
                    android:text="@string/meat_poultry" />

                <RadioButton
                    android:id="@+id/radioButton_meat_sheep_goat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onMeatSelected"
                    android:text="@string/meat_sheep_goat" />

                <RadioButton
                    android:id="@+id/radioButton_meat_fish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onMeatSelected"
                    android:text="@string/meat_fish" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/block_not_pressed"
            android:orientation="vertical"
            android:paddingBottom="@dimen/block_vertical_padding"
            android:paddingLeft="@dimen/block_horizontal_padding"
            android:paddingRight="@dimen/block_horizontal_padding"
            android:paddingTop="@dimen/block_vertical_padding" >

            <android.support.v7.widget.GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_select_amount"
                    android:layout_marginRight="@dimen/activity_input_inner_margin"
                    grid:layout_column="0"
                    grid:layout_row="0"
                    android:text="@string/textView_select_amount"
                    android:textSize="@dimen/abc_text_size_medium_material"/>

                <TextView
                    android:id="@+id/textView_select_date"
                    android:layout_marginRight="@dimen/activity_input_inner_margin"
                    grid:layout_column="0"
                    grid:layout_row="1"
                    android:text="@string/textView_select_date"
                    android:textSize="@dimen/abc_text_size_medium_material"/>

                <TextView
                    android:id="@+id/textview_weight"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="fill_parent"
                    grid:layout_column="1"
                    grid:layout_row="0"
                    android:onClick="showWeightPicker" />

                <TextView
                    android:id="@+id/textview_date"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="fill_parent"
                    grid:layout_column="1"
                    grid:layout_row="1"
                    android:onClick="showDatePicker"
                    android:text="@string/today" />
            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>