<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_details"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_barchart_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textView_barchart_heading"
                android:textSize="@dimen/heading_text_size" />

            <TextView
                android:id="@+id/textView_barchart_savingsAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/headingPaddingBottom"
                android:text="@string/savingsAmount"
                android:textSize="@dimen/heading_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/iconchart_inset_not_pressed"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <freerunningapps.veggietizer.view.chart.BarChart
                    android:id="@+id/BarChartBeef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/block_vertical_padding"
                    custom:animationDuration="@integer/animationDuration"
                    custom:barChartHeight="@dimen/barChartHeight"
                    custom:barHeading="@string/meat_beef"
                    custom:barWidthPercentage="@integer/chartWidthPercentage"
                    custom:borderWidth="@dimen/borderWidth"
                    custom:greyBar="@bool/show_grey_bar"
                    custom:startDelayBarChart="@integer/animationStartDelay"
                    custom:textBarMargin="@dimen/chartTextMargin"
                    custom:textSize="@dimen/chartHeadingSize">
                </freerunningapps.veggietizer.view.chart.BarChart>

                <freerunningapps.veggietizer.view.chart.BarChart
                    android:id="@+id/BarChartPork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:animationDuration="@integer/animationDuration"
                    custom:barChartHeight="@dimen/barChartHeight"
                    custom:barHeading="@string/meat_pork"
                    custom:barWidthPercentage="@integer/chartWidthPercentage"
                    custom:borderWidth="@dimen/borderWidth"
                    custom:greyBar="@bool/show_grey_bar"
                    custom:startDelayBarChart="@integer/animationStartDelay"
                    custom:textBarMargin="@dimen/chartTextMargin"
                    custom:textSize="@dimen/chartHeadingSize" >
                </freerunningapps.veggietizer.view.chart.BarChart>

                <freerunningapps.veggietizer.view.chart.BarChart
                    android:id="@+id/BarChartPoultry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:animationDuration="@integer/animationDuration"
                    custom:barChartHeight="@dimen/barChartHeight"
                    custom:barHeading="@string/meat_poultry"
                    custom:barWidthPercentage="@integer/chartWidthPercentage"
                    custom:borderWidth="@dimen/borderWidth"
                    custom:greyBar="@bool/show_grey_bar"
                    custom:startDelayBarChart="@integer/animationStartDelay"
                    custom:textBarMargin="@dimen/chartTextMargin"
                    custom:textSize="@dimen/chartHeadingSize" >
                </freerunningapps.veggietizer.view.chart.BarChart>

                <freerunningapps.veggietizer.view.chart.BarChart
                    android:id="@+id/BarChartSheepGoat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:animationDuration="@integer/animationDuration"
                    custom:barChartHeight="@dimen/barChartHeight"
                    custom:barHeading="@string/meat_sheep_goat"
                    custom:barWidthPercentage="@integer/chartWidthPercentage"
                    custom:borderWidth="@dimen/borderWidth"
                    custom:greyBar="@bool/show_grey_bar"
                    custom:startDelayBarChart="@integer/animationStartDelay"
                    custom:textBarMargin="@dimen/chartTextMargin"
                    custom:textSize="@dimen/chartHeadingSize" >
                </freerunningapps.veggietizer.view.chart.BarChart>

                <freerunningapps.veggietizer.view.chart.BarChart
                    android:id="@+id/BarChartFish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:animationDuration="@integer/animationDuration"
                    custom:barChartHeight="@dimen/barChartHeight"
                    custom:barHeading="@string/meat_fish"
                    custom:barWidthPercentage="@integer/chartWidthPercentage"
                    custom:borderWidth="@dimen/borderWidth"
                    custom:greyBar="@bool/show_grey_bar"
                    custom:startDelayBarChart="@integer/animationStartDelay"
                    custom:textBarMargin="@dimen/chartTextMargin"
                    custom:textSize="@dimen/chartHeadingSize"
                    android:visibility="gone">
                </freerunningapps.veggietizer.view.chart.BarChart>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>